# Lockr

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
apps/desktop/: README.md
apps/desktop/src-tauri/: tauri.conf.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: crypto.rs  vault.rs
