[package]
name = "lockr-core"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
argon2 = "0.5"
chacha20poly1305 = { version = "0.10", features = ["alloc"] }
rand = "0.8"
zeroize = "1.7"
secrecy = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
base64 = "0.22"
